--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,10 +9,15 @@ $pink: #fdcbbf;
 $violet: #a6467a;
 $light-orange: #f25e7a;
 $neon-red: #ce0057;
+$dark-red: #401502;
+$dark-brown: #403402;
+$dark-purple: #270240;
+$light-brown: #8d7c77;
 $white: #fff;
 $off-white: #f2f4f5;
 $off-gray: #DBD8E3;
 $black: #000;
+$off-black: #0d0b0a;
 $sun: #ffd712;
 
 //Padding
